--- a/apps/marketing/campaign_performance.html
+++ b/apps/marketing/campaign_performance.html
@@ -27,9 +27,9 @@
       }
     };
   </script>
-  <script src="../core/ai.js" defer></script>
-  <script src="../core/main.js" defer></script>
-  <script src="../core/ux.js" defer></script>
-  <script src="../core/charts.js" defer></script>
+  <script src="../../core/ai.js" defer></script>
+  <script src="../../core/main.js" defer></script>
+  <script src="../../core/ux.js" defer></script>
+  <script src="../../core/charts.js" defer></script>
 </body>
 </html>
