--- a/apps/bank_profitability/totalProfit.html
+++ b/apps/bank_profitability/totalProfit.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="Content-Security-Policy" content="img-src 'self' data:; default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; connect-src 'self' https://trwth.com; object-src 'none';">
+  <meta http-equiv="Content-Security-Policy" content="img-src 'self' data:; default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; connect-src 'self' https://bankersiq.com; object-src 'none';">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../../styles/base.css">
   <title>Relationship Profitability</title>
@@ -15,7 +15,7 @@
       libraries: [
         'financial',
         'organization',
-        'https://trwth.com/api/trates/'
+        'https://bankersiq.com/api/trates/'
       ],
       formula: 'checking.depositProfit + savings.depositProfit + cd.depositProfit + loan.profit',
       groupBy: 'Portfolio',
