--- a/apps/bank_profitability/loanProfit.html
+++ b/apps/bank_profitability/loanProfit.html
@@ -12,6 +12,7 @@
   <script>
     // App configuration
     const appConfig = {
+      description: 'Calculate the profit of each loan relationship based on market conditions and industy intelligence',
       libraries: [
         'financial',
         'organization',
