--- a/apps/marketing/campaign_performance.html
+++ b/apps/marketing/campaign_performance.html
@@ -17,7 +17,7 @@
         'financial',
         'organization'
       ],
-      formula: 'loan.class in [1, 20] & loan.open > "2024-01-01" & loan.open < "2024-11-03" ?  loan.principal : null',
+      formula: 'units == 1 && loan.class in [1, 20] && loan.open > "2024-01-01" && loan.open < "2024-11-03" ?  loan.principal : null',
       groupBy: 'Portfolio',
       presentation: {
         columns: [
