--- a/apps/demos/demo1.html
+++ b/apps/demos/demo1.html
@@ -9,15 +9,18 @@
 <body>
   <script>
     // App configuration
-    const appConfig = [
-      { "heading": "Portfolio", "id": "Portfolio", "column_type": "data", "data_type": "unique" },
-      { "heading": "Loan Type", "id": "Class_Code", "column_type": "data", "data_type": "integer", "source_name": "loan", "filter": "[20]" },
-      { "heading": "Principal", "id": "Principal", "column_type": "data", "data_type": "currency", "source_name": "loan" },
-      { "heading": "Rate", "id": "Rate", "column_type": "data", "data_type": "rate", "source_name": "loan" },
-      { "heading": "Balance", "id": "Average_Balance", "column_type": "data", "data_type": "currency", "source_name": "checking" },
-      { "heading": "Interest Income", "id": "interestIncome", "column_type": "function", "function": "costofFunds(Principal, Rate)", "data_type": "currency" },
-      { "heading": "Commission", "id": "commission", "column_type": "formula", "formula": "interestIncome * 0.1", "data_type": "currency" }
-    ];
+    window.appConfig = {
+      description: `<p>demo 1</p>`,
+      table: [
+        { "heading": "Portfolio", "id": "Portfolio", "column_type": "data", "data_type": "unique" },
+        { "heading": "Loan Type", "id": "Class_Code", "column_type": "data", "data_type": "integer", "source_name": "loan", "filter": "[20]" },
+        { "heading": "Principal", "id": "Principal", "column_type": "data", "data_type": "currency", "source_name": "loan" },
+        { "heading": "Rate", "id": "Rate", "column_type": "data", "data_type": "rate", "source_name": "loan" },
+        { "heading": "Balance", "id": "Average_Balance", "column_type": "data", "data_type": "currency", "source_name": "checking" },
+        { "heading": "Interest Income", "id": "interestIncome", "column_type": "function", "function": "costofFunds(Principal, Rate)", "data_type": "currency", "source_name": "loan" },
+        { "heading": "Commission", "id": "commission", "column_type": "formula", "formula": "interestIncome * 0.1", "data_type": "currency" }
+      ]
+    }
   </script>
   <script src="../../core/fi.js" defer></script>
 </body>
