--- a/apps/bank_profitability/savingsProfit.html
+++ b/apps/bank_profitability/savingsProfit.html
@@ -15,7 +15,7 @@
         { "heading": "Portfolio", "id": "Portfolio", "column_type": "data", "data_type": "unique" },
         { "heading": "Type", "id": "Class_Code", "column_type": "data", "data_type": "integer", "source_name": "savings", "filter": "[1]" },
         { "heading": "Balance", "id": "Previous_Average_Balance", "column_type": "data", "data_type": "currency", "source_name": "savings" },
-        { "heading": "Profit", "id": "savingsProfit", "column_type": "function", "function": "savingsProfit", "data_type": "currency", "source_name": "savings", "sort": "desc" }
+        { "heading": "Profit", "id": "savingsProfit", "column_type": "function", "data_type": "currency", "source_name": "savings", "sort": "desc" }
       ]
     }
   </script>
