--- a/apps/bank_profitability/totalProfit.html
+++ b/apps/bank_profitability/totalProfit.html
@@ -15,10 +15,10 @@
         { "heading": "Portfolio", "id": "Portfolio", "column_type": "data", "data_type": "unique" },
         { "heading": "Loan Type", "id": "Class_Code", "column_type": "data", "data_type": "integer", "source_name": "loan" },
         { "heading": "Principal", "id": "Principal", "column_type": "data", "data_type": "currency", "source_name": "loan" },
-        { "heading": "Loan Profit", "id": "loanProfit", "column_type": "function", "function": "loanProfit", "data_type": "currency", "source_name": "loan" },
+        { "heading": "Loan Profit", "id": "loanProfit", "column_type": "function", "data_type": "currency", "source_name": "loan" },
         { "heading": "Checking Type", "id": "Class_Code", "column_type": "data", "data_type": "integer", "source_name": "checking" },
         { "heading": "Balance", "id": "Average_Balance", "column_type": "data", "data_type": "currency", "source_name": "checking" },
-        { "heading": "Checking Profit", "id": "checkingProfit", "column_type": "function", "function": "checkingProfit", "data_type": "currency", "source_name": "checking"},
+        { "heading": "Checking Profit", "id": "checkingProfit", "column_type": "function", "data_type": "currency", "source_name": "checking"},
         { "heading": "Total Profit", "id": "profit", "column_type": "formula", "formula": "checkingProfit + loanProfit - 1000", "data_type": "currency", "sort": "desc" }
       ]
     }
