--- a/apps/bank_profitability/certificateProfit.html
+++ b/apps/bank_profitability/certificateProfit.html
@@ -15,7 +15,7 @@
         { "heading": "Portfolio", "id": "Portfolio", "column_type": "data", "data_type": "unique" },
         { "heading": "Type", "id": "Class_Code", "column_type": "data", "data_type": "integer", "source_name": "certificate" },
         { "heading": "Balance", "id": "Previous_Average_Balance", "column_type": "data", "data_type": "currency", "source_name": "certificate" },
-        { "heading": "Profit", "id": "CDProfit", "column_type": "function", "function": "CDProfit", "data_type": "currency", "source_name": "certificate", "sort": "desc" }
+        { "heading": "Profit", "id": "CDProfit", "column_type": "function", "data_type": "currency", "source_name": "certificate", "sort": "desc" }
       ]
     }
   </script>
