--- a/apps/analysis/indirectRelationships.html
+++ b/apps/analysis/indirectRelationships.html
@@ -10,8 +10,8 @@
   <script>
     // App configuration
     window.appConfig = {
-      description: `<p>Show checking accounts for indirect loan borrowers</p>`,
-      table: [
+      "description": "Show checking accounts for indirect loan borrowers",
+      "table": [
         { "heading": "Portfolio", "id": "Portfolio", "column_type": "data", "data_type": "unique" },
         { "heading": "Loan Type", "id": "Class_Code", "column_type": "data", "data_type": "integer", "source_name": "loan", "filter": "[20]" },
         { "heading": "Principal", "id": "Principal", "column_type": "data", "data_type": "currency", "source_name": "loan" },
