--- a/apps/sales/checkingSales.html
+++ b/apps/sales/checkingSales.html
@@ -16,7 +16,7 @@
         { "heading": "Balance", "id": "Average_Balance", "column_type": "data", "data_type": "currency", "source_name": "checking" },
         { "heading": "Branch", "id": "Branch_Number", "column_type": "data", "data_type": "integer", "source_name": "checking" },
         { "heading": "Officer", "id": "Owner_Code", "column_type": "data", "data_type": "integer", "source_name": "checking" },
-        { "heading": "Open", "id": "Open_Date", "column_type": "data", "data_type": "date", "source_name": "checking", "filter":  "> 720" }, //"> 2023-03-25" },
+        { "heading": "Open", "id": "Open_Date", "column_type": "data", "data_type": "date", "source_name": "checking", "filter":  "> 2023-05-14" }, //"> 2023-03-25" },
         { "heading": "Commission", "id": "commission", "column_type": "formula", "data_type": "currency", "formula": "Average_Balance * .01" }
       
       ]
