--- a/apps/sales/checkingSalesByBranch.html
+++ b/apps/sales/checkingSalesByBranch.html
@@ -13,11 +13,11 @@
       description: `<p>Show the checking accounts opened within a period of time defined by the filter</p>`,
       table: [
         { "heading": "Branch", "id": "Branch_Number", "column_type": "data", "data_type": "unique" },
-        { "heading": "Balance", "id": "Previous_Average_Balance", "column_type": "data", "data_type": "currency", "source_name": "checking" },
-        { "heading": "Officer", "id": "Opened_by_Resp_Code", "column_type": "data", "data_type": "integer", "source_name": "checking" },
-        { "heading": "Open", "id": "Date_Opened", "column_type": "data", "data_type": "date", "source_name": "checking", "filter":  "> 720" }, //"> 2023-03-25" },
+        { "heading": "Balance", "id": "Average_Balance", "column_type": "data", "data_type": "currency", "source_name": "checking" },
+        { "heading": "Officer", "id": "Owner_Code", "column_type": "data", "data_type": "integer", "source_name": "checking" },
+        { "heading": "Open", "id": "Open_Date", "column_type": "data", "data_type": "date", "source_name": "checking", "filter":  "> 720" }, //"> 2023-03-25" },
         { "heading": "Goal", "id": "Goal", "column_type": "data", "data_type": "currency", "source_name": "branch" },
-        { "heading": "performance", "id": "performance", "column_type": "formula", "formula": "Previous_Average_Balance / Goal", "data_type": "rate" }
+        { "heading": "performance", "id": "performance", "column_type": "formula", "formula": "Average_Balance / Goal", "data_type": "rate" }
       ]
     }
   </script>
