--- a/apps/bank_profitability/certificateProfit.html
+++ b/apps/bank_profitability/certificateProfit.html
@@ -12,10 +12,10 @@
     window.appConfig = {
       description: `<p>Calculate the profit of each certificate of deposit relationship based on market conditions and industy intelligence</p>`,
       table: [
-        { "heading": "Portfolio", "id": "Portfolio", "column_type": "data", "data_type": "unique" },
-        { "heading": "Type", "id": "Class_Code", "column_type": "data", "data_type": "integer", "source_name": "certificate" },
-        { "heading": "Balance", "id": "Previous_Average_Balance", "column_type": "data", "data_type": "currency", "source_name": "certificate" },
-        { "heading": "Profit", "id": "CDProfit", "column_type": "function", "data_type": "currency", "source_name": "certificate", "sort": "desc" }
+        { heading: "Portfolio", id: "Portfolio", column_type: "data", data_type: "unique" },
+        { heading: "Type", id: "Class_Code", column_type: "data", data_type: "integer", source_name: "certificate" },
+        { heading: "Balance", id: "Previous_Average_Balance", column_type: "data", data_type: "currency", source_name: "certificate" },
+        { heading: "Profit", id: "CDProfit", column_type: "function", data_type: "currency", source_name: "certificate", sort: "desc" }
       ]
     }
   </script>
