--- a/apps/sales/checkingSales.html
+++ b/apps/sales/checkingSales.html
@@ -12,13 +12,12 @@
     window.appConfig = {
       description: `<p>Show the checking accounts opened within a period of time defined by the filter</p>`,
       table: [
-        { "heading": "Portfolio", "id": "Portfolio", "column_type": "data", "data_type": "unique" },
-        { "heading": "Balance", "id": "Average_Balance", "column_type": "data", "data_type": "currency", "source_name": "checking" },
-        { "heading": "Branch", "id": "Branch_Number", "column_type": "data", "data_type": "integer", "source_name": "checking" },
-        { "heading": "Officer", "id": "Owner_Code", "column_type": "data", "data_type": "integer", "source_name": "checking" },
-        { "heading": "Open", "id": "Open_Date", "column_type": "data", "data_type": "date", "source_name": "checking", "filter":  "> 2023-05-14" }, //"> 2023-03-25" },
-        { "heading": "Commission", "id": "commission", "column_type": "formula", "data_type": "currency", "formula": "Average_Balance * .01" }
-      
+        { heading: "Portfolio", id: "Portfolio", column_type: "data", data_type: "unique" },
+        { heading: "Balance", id: "Average_Balance", column_type: "data", data_type: "currency", source_name: "checking" },
+        { heading: "Branch", id: "Branch_Number", column_type: "data", data_type: "integer", source_name: "checking" },
+        { heading: "Officer", id: "Owner_Code", column_type: "data", data_type: "integer", source_name: "checking" },
+        { heading: "Open", id: "Open_Date", column_type: "data", data_type: "date", source_name: "checking", where:  "> 2023-05-14" }, 
+        { heading: "Commission", id: "commission", column_type: "formula", data_type: "currency", formula: "Average_Balance * .01" }
       ]
     }
   </script>
