--- a/apps/sales/checkingSalesByOfficer.html
+++ b/apps/sales/checkingSalesByOfficer.html
@@ -12,12 +12,12 @@
     window.appConfig = {
       description: `<p>Show the checking accounts opened by officer within a period of time defined by the filter</p>`,
       table: [
-        { "heading": "Officer", "id": "Owner_Code", "column_type": "data", "data_type": "unique" },
-        { "heading": "Balance", "id": "Average_Balance", "column_type": "data", "data_type": "currency", "source_name": "checking" },
-        { "heading": "Annualized Balance ", "id": "annualizedPerformance", "column_type": "function", "data_type": "currency", "source_name": "checking", "sort": "desc" },
-        { "heading": "Open", "id": "Open_Date", "column_type": "data", "data_type": "date", "source_name": "checking", "filter": "> 2024-01-01 && <= 2024-12-31" },
-        { "heading": "Goal", "id": "Goal", "column_type": "data", "data_type": "currency", "source_name": "officer" },
-        { "heading": "Performance", "id": "performance", "column_type": "formula", "formula": "annualizedPerformance / Goal", "data_type": "rate" }
+        { heading: "Officer", id: "Owner_Code", column_type: "data", data_type: "unique" },
+        { heading: "Balance", id: "Average_Balance", column_type: "data", data_type: "currency", source_name: "checking" },
+        { heading: "Annualized Balance ", id: "annualizedPerformance", column_type: "function", data_type: "currency", source_name: "checking", sort: "desc" },
+        { heading: "Open", id: "Open_Date", column_type: "data", data_type: "date", source_name: "checking", where: "> 2024-01-01 && <= 2024-12-31" },
+        { heading: "Goal", id: "Goal", column_type: "data", data_type: "currency", source_name: "officer" },
+        { heading: "Performance", id: "performance", column_type: "formula", formula: "annualizedPerformance / Goal", data_type: "rate" }
       ]
     }
   </script>
