--- a/apps/analysis/indirectRelationships.html
+++ b/apps/analysis/indirectRelationships.html
@@ -10,12 +10,12 @@
   <script>
     // App configuration
     window.appConfig = {
-      "description": "Show checking accounts for indirect loan borrowers",
-      "table": [
-        { "heading": "Portfolio", "id": "Portfolio", "column_type": "data", "data_type": "unique" },
-        { "heading": "Loan Type", "id": "Class_Code", "column_type": "data", "data_type": "integer", "source_name": "loan", "filter": "[20]" },
-        { "heading": "Principal", "id": "Principal", "column_type": "data", "data_type": "currency", "source_name": "loan" },
-        { "heading": "Balance", "id": "Average_Balance", "column_type": "data", "data_type": "currency", "source_name": "checking" }
+      description: "Show checking accounts for indirect loan borrowers",
+      table: [
+        { heading: "Portfolio", id: "Portfolio", column_type: "data", data_type: "unique" },
+        { heading: "Loan Type", id: "Class_Code", column_type: "data", data_type: "integer", source_name: "loan", where: "[20]" },
+        { heading: "Principal", id: "Principal", column_type: "data", data_type: "currency", source_name: "loan" },
+        { heading: "Balance", id: "Average_Balance", column_type: "data", data_type: "currency", source_name: "checking" }
       ]
     }
   </script>
