--- a/apps/bank_profitability/loanProfit.html
+++ b/apps/bank_profitability/loanProfit.html
@@ -16,7 +16,8 @@
         { heading: "Portfolio", id: "Portfolio", column_type: "data", data_type: "unique" },
         { heading: "Loan Type", id: "Class_Code", column_type: "data", data_type: "integer", source_name: "loan", where: "[1, 20]"},
         { heading: "Principal", id: "Principal", column_type: "data", data_type: "currency", source_name: "loan" },
-        { heading: "Profit", id: "loanProfit", column_type: "function", data_type: "currency", source_name: "loan", sort: "desc"}
+        { heading: "Profit", id: "loanProfit", column_type: "function", data_type: "currency", source_name: "loan", sort: "desc"},
+        { heading: "LendersIQ", id: "lendersiq", column_type: "call", url: "lendersiq.html" }
       ]
     }
   </script>
