--- a/apps/demos/forms_demo.html
+++ b/apps/demos/forms_demo.html
@@ -21,6 +21,15 @@
           step: 1000
         },
         { 
+          id: "balance ",
+          type: "number", 
+          label: "Deposit Balance", 
+          value: 100000,
+          min: 0,
+          step: 0,
+          disabled: true
+        },
+        { 
           id: "customerName",
           type: "text", 
           label: "Customer Name", 
